Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_animeplayer.yml
+++ b/.github/workflows/master_animeplayer.yml
@@ -39,22 +39,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_71988D8A7B8E4CB4832CC62CF771FAD7 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6DA3856E6E2C480D97F054FB8C6F54C7 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1CB9E3876EDC478C82E0544C1A968B3E }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -62,4 +53,4 @@ jobs:
           app-name: 'AnimePlayer'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8740C283C00E432C9C4897D650250A26 }}
